--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
 
 <body>
   <video autoplay muted loop id="myVideo">
-    <source src="../pictures/vid1.mp4" type="video/mp4">
+    <source src="./vid1.mp4" type="video/mp4">
   </video>
 
   <div class="container head">
