--- a/services.html
+++ b/services.html
@@ -169,7 +169,7 @@
       <div class="col-auto">
 
         <div class="card wow zoomInDown" data-wow-delay="3s" style="width: 18rem;" id="card">
-          <img src="../pictures/daria-nepriakhina-zoCDWPuiRuA-unsplash.jpg" class="card-img-top" alt="..."
+          <img src="./daria-nepriakhina-zoCDWPuiRuA-unsplash.jpg" class="card-img-top" alt="..."
             style="border-radius: 11%;">
           <div class="card-body">
             <h2 class="card-text"><b>Branding</b></h2>
