--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <h1 class="e1 wow bounceIn" data-wow-delay="3s">BRANDING MADE SIMPLE</h1>
     <p class="e2 wow bounceIn" data-wow-delay="4s">Build Your Brand's Success</p>
-    <a href="./contactus.html" class="l2"> <button type="button" class="btn btn-outline-light e3 d-grid gap-1 col-3 mx-auto wow bounceIn" data-wow-delay="5s"><b>Contact Us</b></button>
+    <a href="mailto: contact@letusbrand.in" class="l2"> <button type="button" class="btn btn-outline-light e3 d-grid gap-1 col-3 mx-auto wow bounceIn" data-wow-delay="5s"><b>Contact Us</b></button>
     </a>
   </div>
 
