--- a/events.html
+++ b/events.html
@@ -59,7 +59,7 @@
                 </li>
                 <li class="nav-item">
     
-                  <a class="nav-link" href="./services.html"> <button disabled type="button" class="btn btn-outline-dark a"
+                  <a class="nav-link" href="./services.html"> <button type="button" class="btn btn-outline-dark a"
                      ><b>Services</b></button></a>
     
                 </li>
