--- a/events.html
+++ b/events.html
@@ -65,7 +65,7 @@
                 </li>
                 <li class="nav-item">
     
-                  <a class="nav-link" href="./events.html"> <button disabled type="button" class="btn btn-outline-light a "
+                  <a class="nav-link" href="./events.html"> <button disabled type="button" class="btn btn-outline-dark a "
                      ><b>Events</b></button></a>
     
                 </li>
